发布maven中央仓库

--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.coctrl</groupId>
+    <groupId>com.kangaroohy</groupId>
     <artifactId>minio-spring-boot-starter</artifactId>
     <version>1.0.0</version>
     <name>minio-spring-boot-starter</name>
-    <description>minio-spring-boot-starter</description>
+    <description>minio对象存储spring boot starter封装组件</description>
+    <url>https://github.com/kangaroo1122/minio-spring-boot-starter</url>
 
     <properties>
         <java.version>1.8</java.version>
@@ -18,6 +19,28 @@
         <slf4j.version>1.7.36</slf4j.version>
         <lombok.version>1.18.22</lombok.version>
     </properties>
+
+    <organization>
+        <name>kangaroo1122</name>
+        <url>https://www.kangaroohy.com</url>
+    </organization>
+    <developers>
+        <developer>
+            <name>kangaroo1122</name>
+            <email>326170945@qq.com</email>
+            <organization>kangaroo1122</organization>
+            <organizationUrl>https://www.kangaroohy.com</organizationUrl>
+            <timezone>+8</timezone>
+        </developer>
+    </developers>
+    <scm>
+        <url>https://github.com/kangaroo1122/minio-spring-boot-starter</url>
+        <connection>https://github.com/kangaroo1122/minio-spring-boot-starter.git</connection>
+    </scm>
+    <issueManagement>
+        <system>GitHub</system>
+        <url>https://github.com/kangaroo1122/minio-spring-boot-starter/issues</url>
+    </issueManagement>
 
     <dependencies>
         <dependency>
@@ -55,4 +78,70 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
+
+    <distributionManagement>
+        <repository>
+            <id>ossrh</id>
+            <name>oss nexus repository hosting</name>
+            <url>https://s01.oss.sonatype.org/content/repositories/releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <name>oss nexus repository hosting</name>
+            <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
+
+    <build>
+        <plugins>
+            <!--生成源码插件-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.0.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                        <phase>package</phase>
+                    </execution>
+                </executions>
+            </plugin>
+            <!--javadoc生成插件		-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.10.4</version>
+                <configuration>
+                    <additionalparam>-Xdoclint:none</additionalparam>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                        <phase>package</phase>
+                    </execution>
+                </executions>
+            </plugin>
+            <!-- jar等文件签名插件，用于生成asc签名文件 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.6</version>
+                <executions>
+                    <execution>
+                        <id>gpg</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
