--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.kangaroohy</groupId>
     <artifactId>minio-spring-boot-starter</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2</version>
     <name>minio-spring-boot-starter</name>
     <description>minio对象存储spring boot starter封装组件</description>
     <url>https://github.com/kangaroo1122/minio-spring-boot-starter</url>
@@ -15,8 +15,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <spring-boot.version>2.5.6</spring-boot.version>
-        <minio.version>8.3.7</minio.version>
-        <slf4j.version>1.7.36</slf4j.version>
+        <minio.version>8.4.6</minio.version>
+        <slf4j.version>2.0.5</slf4j.version>
         <lombok.version>1.18.24</lombok.version>
     </properties>
 
@@ -64,11 +64,13 @@
             <groupId>org.slf4j</groupId>
             <artifactId>log4j-over-slf4j</artifactId>
             <version>${slf4j.version}</version>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>${slf4j.version}</version>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
